Fix bug where hiding panel overflows causing a scrollbar.

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,6 +1,7 @@
 .home {
   height: 100%;
   padding-bottom: 0;
+  overflow: hidden;
 
   .leaflet-control-zoom {
     top: 70px;
